--- a/WASD2Web/WASD2Web.csproj
+++ b/WASD2Web/WASD2Web.csproj
@@ -168,6 +168,7 @@
     <Content Include="images\miamibeach3.jpg" />
     <Content Include="images\monster.png" />
     <Content Include="images\nature.mp4" />
+    <Content Include="images\oksanabaiul.jpg" />
     <Content Include="images\shield.png" />
     <Content Include="images\sunlight1.jpg" />
     <Content Include="images\sunlight2.jpg" />
