--- a/WASD2Web/WASD2Web.csproj
+++ b/WASD2Web/WASD2Web.csproj
@@ -125,6 +125,18 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\slideArchitect.jpg" />
+    <Content Include="images\slideBeach.png" />
+    <Content Include="images\slideBeach1.png" />
+    <Content Include="images\slideBeach2.png" />
+    <Content Include="images\slideChemical.jpg" />
+    <Content Include="images\slideSparks.jpg" />
+    <Content Include="images\slideWater1.jpg" />
+    <Content Include="images\slideWater2.jpg" />
+    <Content Include="images\slideWater3.jpg" />
+    <Content Include="images\slideWater4.jpg" />
+    <Content Include="images\slideWaterPipe1.jpg" />
+    <Content Include="images\slideWaterPipe2.jpg" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -145,22 +157,14 @@
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="images\Andrew.jpg" />
-    <Content Include="images\Andrew_bw.jpg" />
-    <Content Include="images\Andrew_bw_square.jpg" />
-    <Content Include="images\Andrew_bw_square_small.jpg" />
-    <Content Include="images\iggyPop.jpg" />
+    <Content Include="images\cardHeader1.jpg" />
+    <Content Include="images\cardHeader2.jpg" />
+    <Content Include="images\cardHeader3.png" />
+    <Content Include="images\cardHeader4.png" />
+    <Content Include="images\cardHeader5.jpg" />
     <Content Include="images\ironMan.png" />
     <Content Include="images\leaf.jpg" />
     <Content Include="images\logo-tagline-white.png" />
-    <Content Include="images\marvel1.jpg" />
-    <Content Include="images\marvel2.jpg" />
-    <Content Include="images\marvel3.jpg" />
-    <Content Include="images\marvel4.jpg" />
-    <Content Include="images\marvel5.jpg" />
-    <Content Include="images\marvel6.jpg" />
-    <Content Include="images\marvel7.jpg" />
-    <Content Include="images\marvel8.jpg" />
     <Content Include="images\md-logo.png" />
     <Content Include="images\Miami-Dade-County-Logo.jpg" />
     <Content Include="images\miamibeach1.jpg" />
